# osgrive

./: CMakeLists.txt  README.md
examples/: debug_loader.cpp  glfw_rive_texture.cpp  osgrive_example_quad.cpp  osgrive_reference_monolith.cpp  ssbo_stream_demo.cpp
include/osgRive/: Export  FramebufferRenderer  Scene  TextureRenderer
src/: rive_texture_renderer.cpp  rive_texture_renderer.hpp
src/osgRive/: FramebufferRenderer.cpp  FramebufferRendererBackend.cpp  FramebufferRendererBackend.hpp  RiveGLSupport.hpp  Scene.cpp  ScopedOSGStateRestore.hpp  TextureRenderer.cpp  TextureRendererBackend.cpp  TextureRendererBackend.hpp
